adding angular elements

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <iss-root></iss-root>
+  <iss-temperature-gauge
+    unit="fahrenheit"
+    station-component="discombobulator"
+    width="300"
+    height="500"
+  ></iss-temperature-gauge>
 </body>
 </html>
